chandeliers-lus/tests/compile_fail/ui/clk/merge.stderr
error: This expression is too slow: expected 'self got 'when b
 --> tests/compile_fail/ui/clk/merge.rs:4:23
  |
4 |         i = if b then x when b else y whenot b;
  |                       ^^^^^^^^
  |
note: Found 'when b here
 --> tests/compile_fail/ui/clk/merge.rs:4:30
  |
4 |         i = if b then x when b else y whenot b;
  |                              ^
note: Expected because this expression moves at the implicit pace
 --> tests/compile_fail/ui/clk/merge.rs:4:16
  |
4 |         i = if b then x when b else y whenot b;
  |                ^
